# devhelp

./: .cvsignore  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  NOTES_FOR_FUTURE_MAINTAINERS  README  README.md  TODO  TODO.md  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  devhelp.desktop.in  devhelp.desktop.in.in  devhelp.doap  devhelp.in  devhelp.keys.in  devhelp.mime  devhelp.schemas  devhelp.schemas.in  devhelp.spec.in  intltool-extract.in  intltool-merge.in  intltool-update.in  libdevhelp-1.0.pc.in  meson.build  meson_options.txt  meson_post_install.py
attic/: TODO  dhb-contents-1.dtd  dhs-1.dtd  html2funcs.py  html2xml.py  man2xml.py
build-aux/flatpak/: 1-build-and-install.sh  3-teardown.sh  README  README.md  org.gnome.Devhelp.Devel.json  org.gnome.Devhelp.json  run-flatpak.sh
contrib/: CHM_HTB2devhelp.README  Makefile.am  README  bulkman.pl  texi2devhelp.sh
data/: Makefile.am  assistant.css  assistant.js  devhelp.1  devhelp.appdata.xml.in  devhelp.convert  devhelp.desktop.in.in  devhelp.schemas.in  libdevhelp-1.0.pc.in  libdevhelp-2.0.pc.in  libdevhelp-3.0.pc.in  meson.build  org.gnome.Devhelp.appdata.xml.in  org.gnome.Devhelp.appdata.xml.in.in  org.gnome.Devhelp.desktop.in  org.gnome.Devhelp.desktop.in.in  org.gnome.Devhelp.json  org.gnome.Devhelp.metainfo.xml.in.in  org.gnome.Devhelp.service.in  org.gnome.devhelp.gschema.xml  org.gnome.devhelp.gschema.xml.in  org.gnome.libdevhelp-3.gschema.xml  org.gnome.libdevhelp.gschema.xml.in
data/dtd/: Makefile.am  dhb-keywords-1.dtd  dhb-metadata-1.dtd
data/icons/: Makefile.am  meson.build
data/ui/: Makefile.am  devhelp.builder  devhelp.glade  window.ui
debian/: .cvsignore  changelog  control  copyright  devhelp.1  files  rules
devhelp/: Makefile.am  devhelp.h  dh-application-window.c  dh-application-window.h  dh-assistant-view.c  dh-assistant-view.h  dh-book-list-builder.c  dh-book-list-builder.h  dh-book-list-directory.c  dh-book-list-directory.h  dh-book-list-simple.c  dh-book-list-simple.h  dh-book-list.c  dh-book-list.h  dh-book-manager.c  dh-book-manager.h  dh-book-tree.c  dh-book-tree.h  dh-book.c  dh-book.h  dh-completion.c  dh-completion.h  dh-docset.c  dh-docset.h  dh-enum-types.h.template  dh-error.c  dh-error.h  dh-init.c  dh-init.h  dh-keyword-model.c  dh-keyword-model.h  dh-link.c  dh-link.h  dh-notebook.c  dh-notebook.h  dh-parser.c  dh-parser.h  dh-profile-builder.c  dh-profile-builder.h  dh-profile.c  (+25 more)
devhelp/future/: README  dh-dconf-migration.c  dh-dconf-migration.h
docs/: professional-services.md  similar-apps.md
docs/reference/: Makefile.am  api-breaks.md  api-breaks.xml  devhelp-docs.xml  devhelp-sections.txt  devhelp.toml.in  meson.build
docs/reference/xml/: gtkdocentities.ent.in  meson.build
dtd/: Makefile.am  devhelp-1.dtd  dhb-metadata-1.dtd~  dhs-1.dtd
flatpak/: .gitignore  1-build.sh  2-add-remote.sh  3-install-app.sh  4-run-app.sh  5-teardown.sh  README  org.gnome.Devhelp.json  org.gnome.Devhelp.yml
hack-macros/: gnome.m4  nautilus-macros.m4
help/: LINGUAS  Makefile.am  meson.build
help/C/: book-format.page  index-file-format.page  index.page  installing-api-documentation.page  search.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hr/: hr.po
help/hu/: hu.po
help/it/: it.po
help/ko/: ko.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
idl/: GNOME_DevHelp.idl  GNOME_Devhelp.idl  Makefile.am
libegg/: Makefile.am
libegg/menu/: .cvsignore  ChangeLog  Makefile.am  egg-action-group.c  egg-action-group.h  egg-action.c  egg-markup.c  egg-markup.h  egg-menu-merge.c  egg-menu-merge.h  egg-radio-action.h  egg-toggle-action.c  egg-toggle-action.h  howitshouldwork.txt  merge-2.ui  test-actions.c  test-merge.c
libegg/toolbar/: .cvsignore  Makefile.am  eggseparatortoolitem.c  eggseparatortoolitem.h  eggtoggletoolbutton.c  eggtoggletoolbutton.h  eggtoolbar.c  eggtoolbar.h  eggtoolbutton.c  eggtoolbutton.h  eggtoolitem.c  eggtoolitem.h  prop-editor.c  test-toolbar.c  toolbar-api.txt  toolbar-ideas.txt
libegg/util/: .cvsignore  Makefile.am  egg-macros.h
m4/: .gitignore
misc/: Makefile.am  devhelp.el  devhelp.vim  html2xml.py  man2xml.py
misc/gedit-plugin/: .cvsignore  Makefile.am  devhelp.desktop.in  devhelp.gedit-plugin.desktop.in  devhelp.plugin.desktop.in  devhelp.py
misc/gedit-plugin/devhelp/: Makefile.am  __init__.py  devhelp.py
plugins/: Makefile.am  devhelp.el  devhelp.vim  meson.build
plugins/gedit-plugin/: Makefile.am  devhelp.plugin.desktop.in  devhelp.py  meson.build
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  (+58 more)
src/: .cvsignore  GNOME_DevHelp.oaf.in  GNOME_DevHelp.oaf.in.in  GNOME_DevHelp.server.in.in  GNOME_Devhelp.oaf.in  Makefile.am  Yelper.cpp  Yelper.h  bacon-message-connection.c  book-index.c  book-index.h  book-node.h  book.c  book.h  bookmark-manager.c  bookmark-manager.h  books-dialog.c  books-dialog.h  bookshelf.c  bookshelf.h  default-prefs-common.js  default-prefs-gecko-1-8.js  default-prefs-gecko-1-9.js  devhelp-controller.c  devhelp-controller.h  devhelp-marshal.c  devhelp-marshal.list  devhelp-menu.ui  devhelp-search.c  devhelp-search.h  devhelp-view.c  devhelp-view.h  devhelp-window.c  devhelp-window.h  devhelp.h  devhelp.pc.in  devhelp.ui  dh-app.c  dh-app.h  dh-assistant-view.c  (+123 more)
ui/: COPYING  GNOME_DevHelp.ui  GNOME_DevHelp_Controller.ui  Makefile.am  book_open.xpm  book_red.xpm  devhelp.glade  devhelp2.glade  helpdoc.xpm  window.ui
unit-tests/: Makefile.am  meson.build  test-completion.c  test-link.c  test-search-context.c  test-util.c
