SUBDIRS = po src data misc contrib

INTLTOOL =                      \
	intltool-extract.in     \
	intltool-merge.in       \
	intltool-update.in

EXTRA_DIST =			\
	$(INTLTOOL)             \
	autogen.sh		\
	misc/devhelp.el	        \
	misc/html2funcs.py	\
	misc/html2xml.py	\
	misc/devhelp.vim

DISTCLEANFILES = intltool-extract  \
		 intltool-merge    \
		 intltool-update
