AC_INIT([Devhelp],[0.21],[http://bugzilla.gnome.org/enter_bug.cgi?product=devhelp],[devhelp])
  
AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/dh-window.c])

AM_SANITY_CHECK
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_ISC_POSIX
AC_HEADER_STDC

AM_DISABLE_STATIC
F77=no
AM_PROG_LIBTOOL

AM_PATH_GLIB_2_0

IT_PROG_INTLTOOL([0.35.5])
AC_PATH_PROG(GCONFTOOL, gconftool-2)

AM_GCONF_SOURCE_2

IMENDIO_COMPILE_WARNINGS

dnl -----------------------------------------------------------
dnl Platform (GTK+ X11 or GTK OS X)
dnl -----------------------------------------------------------
IGE_PLATFORM_CHECK
if test "x$IGE_PLATFORM" = xx11; then
   gconf_pkgconfig="gconf-2.0 >= 2.6.0"
   libwnck_pkgconfig="libwnck-1.0 >= 2.10.0"
   igemacintegration_pkgconfig=
   REQUIRES_LIBWNCK=libwnck-1.0
   PLATFORM_CFLAGS=
   PLATFORM_LDFLAGS=
else
   gconf_pkgconfig="gconf-2.0 >= 2.6.0"
   libwnck_pkgconfig=
   igemacintegration_pkgconfig="ige-mac-integration >= 0.8.2"
   REQUIRES_LIBWNCK=
   PLATFORM_CFLAGS=
   PLATFORM_LDFLAGS=
fi
AM_CONDITIONAL(GCONF_SCHEMAS_INSTALL, test "x$IGE_PLATFORM" = xx11)
AC_SUBST(PLATFORM_CFLAGS)
AC_SUBST(PLATFORM_LDFLAGS)
AC_SUBST(REQUIRES_LIBWNCK)

PKG_CHECK_MODULES(DEVHELP, [
	gtk+-2.0 >= 2.8.0
	$gconf_pkgconfig
])

PKG_CHECK_MODULES(LIBDEVHELP, [
        gthread-2.0 >= 2.8.0
        gtk+-2.0 >= 2.8.0
	libglade-2.0 >= 2.4.0
	$gconf_pkgconfig
        $libwnck_pkgconfig
        $igemacintegration_pkgconfig
])

PKG_CHECK_MODULES([WEBKIT], [webkit-1.0])

dnl Checks for zlib library.
AC_LANG_PUSH([C])
_SAVE_CPPFLAGS="$CPPFLAGS"
_SAVE_LDFLAGS="$LDFLAGS"
 
AC_ARG_WITH(zlib,
[  --with-zlib[=DIR]       use libz in DIR],[
        if test "$withval" != "no" -a "$withval" != "yes"; then
                Z_DIR=$withval
                CPPFLAGS="$CPPFLAGS -I$withval/include"
                LDFLAGS="$LDFLAGS -L$withval/lib"
        fi
])
if test "$with_zlib" = "no"; then
        echo "Disabling compression support"
else
        AC_CHECK_HEADERS(zlib.h,
                AC_CHECK_LIB(z, gzread,[
                        AC_DEFINE(HAVE_LIBZ,1,[zlib is available])
                        if test "x${Z_DIR}" != "x"; then
                                Z_CFLAGS="-I${Z_DIR}/include"
                                Z_LIBS="-L${Z_DIR}/lib -lz"
                                [case ${host} in
                                        *-*-solaris*)
                                                Z_LIBS="-L${Z_DIR}/lib -R${Z_DIR}/lib -lz"
                                                ;;
                                esac]
                        else
                                Z_LIBS="-lz"
                        fi]))
fi

AC_SUBST(Z_CFLAGS)
AC_SUBST(Z_LIBS)

CPPFLAGS="$_SAVE_CPPFLAGS"
LDFLAGS="$_SAVE_LDFLAGS"
AC_LANG_POP([C])

GETTEXT_PACKAGE=devhelp
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Package name for gettext])

AM_GLIB_GNU_GETTEXT

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AM_PATH_PYTHON([2.3],[],[no])

AC_CONFIG_FILES([
Makefile
libdevhelp-1.0.pc
po/Makefile.in
src/Makefile
data/Makefile
data/devhelp.desktop.in
data/icons/Makefile
data/ui/Makefile
data/dtd/Makefile
misc/Makefile
misc/gedit-plugin/Makefile
misc/gedit-plugin/devhelp/Makefile
contrib/Makefile
])

AC_OUTPUT

echo
echo "Prefix:    $prefix"
echo "Platform:  $IGE_PLATFORM_NAME"
echo
